# focus

./: .gitattributes  .gitignore  AGENTS.example.md  README.md  install.ps1  install.py  pyproject.toml  readme-outline.md  requirements-dev.txt
bot/: __main__.py  adapter_notification_controller.py  bash_completion.py  binding_runtime_manager.py  card_limits.py  card_text_projection.py  cards.py  cli_table.py  codex_advanced_features_domain.py  codex_command_resolver.py  codex_config_reader.py  codex_goal_domain.py  codex_group_domain.py  codex_handler.py  codex_help_domain.py  codex_settings_domain.py  codex_threads_ui_domain.py  config.py  env_file.py  execution_output_controller.py  execution_recovery_controller.py  fcodex.py  fcodex_proxy.py  feishu_bot.py  feishu_card_markdown.py  feishu_codexctl.py  feishu_types.py  feishu_ws_proxy.py  file_permissions.py  focusctl.py  forward_aggregator.py  generated_image_delivery.py  handler.py  inbound_surface_controller.py  install_templates.py  instance_layout.py  instance_resolution.py  interaction_request_controller.py  legacy_migration.py  local_websocket_auth.py  (+28 more)
bot/adapters/: base.py  codex_app_server.py
bot/codex_protocol/: client.py
bot/install_template_data/: __init__.py  codex.yaml.example  system.yaml.example
bot/managed_skills/: __init__.py
bot/stores/: app_server_runtime_store.py  chat_binding_store.py  generated_image_delivery_store.py  instance_registry_store.py  service_instance_lease.py  terminal_result_store.py  (+3 more)
config/: codex.yaml.example  system.yaml.example
docs/: doc-index.md  doc-index.zh-CN.md
scripts/: discover_local_ws_surfaces.py  verify_local_ws_surface.py
tests/: test_adapter_notification_controller.py  test_bash_completion.py  test_binding_runtime_manager.py  test_card_text_projection.py  test_chat_binding_store.py  test_codex_app_server.py  test_codex_config_reader.py  test_codex_group_domain.py  test_codex_handler.py  test_codex_settings_domain.py  test_codex_threads_ui_domain.py  test_execution_output_controller.py  test_execution_recovery_controller.py  test_fcodex_wrapper.py  test_feishu_bot.py  test_feishu_card_markdown.py  test_feishu_codexctl.py  test_focusctl.py  test_forward_aggregator.py  test_generated_image_delivery.py  test_inbound_surface_controller.py  test_install.py  test_install_templates.py  test_instance_registry_store.py  test_interaction_request_controller.py  test_legacy_migration.py  test_main.py  test_manage_cli.py  test_platform_paths.py  test_prompt_turn_entry_controller.py  test_runtime_admin_cli.py  test_runtime_admin_controller.py  test_runtime_card_publisher.py  test_runtime_state.py  test_runtime_view.py  test_scheduled_prompt_skill.py  test_service_control_plane.py  test_service_manager.py  test_shared_command_surface.py  test_thread_image_delivery.py  (+6 more)
(+96 files in other folders)
