[project]
name = "focus"
dynamic = ["version"]
description = "Bridge Feishu chats to Codex via the native app-server protocol."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "lark-oapi>=1.4.23",
  "PyYAML>=6.0",
  "toml>=0.10",
  "websockets>=15.0",
]

[project.scripts]
focus = "bot.fcodex:main"
focusd = "bot.__main__:main"
focusctl = "bot.focusctl:main"
fcodex = "bot.fcodex:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["bot*"]

[tool.setuptools.dynamic]
version = {attr = "bot.version.__version__"}

[tool.setuptools.package-data]
"bot.install_template_data" = ["*.example"]
"bot.managed_skills.feishu_send_image" = ["skill/SKILL.md", "skill/agents/openai.yaml"]
"bot.managed_skills.feishu_scheduled_prompts" = [
  "skill/SKILL.md",
  "skill/agents/openai.yaml",
  "skill/scripts/__init__.py",
  "skill/scripts/manage_scheduled_prompt.py",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
